[BEAM-3901] code reformat to comply beam code standard