@@ -15,6 +15,12 @@
  */
 package cz.seznam.euphoria.operator.test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 import cz.seznam.euphoria.core.client.dataset.Dataset;
 import cz.seznam.euphoria.core.client.dataset.windowing.Count;
 import cz.seznam.euphoria.core.client.dataset.windowing.GlobalWindowing;
@@ -48,10 +54,6 @@ import cz.seznam.euphoria.core.client.util.Triple;
 import cz.seznam.euphoria.operator.test.accumulators.SnapshotProvider;
 import cz.seznam.euphoria.operator.test.junit.AbstractOperatorTest;
 import cz.seznam.euphoria.operator.test.junit.Processing;
-import cz.seznam.euphoria.shadow.com.google.common.collect.Lists;
-import cz.seznam.euphoria.shadow.com.google.common.collect.Sets;
-import org.junit.Test;
-
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -64,230 +66,658 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.junit.Test;
 
-import static org.junit.Assert.*;
-
-/**
- * Test operator {@code ReduceByKey}.
- */
+/** Test operator {@code ReduceByKey}. */
 @Processing(Processing.Type.ALL)
 public class ReduceByKeyTest extends AbstractOperatorTest {
 
   /** Validates the output type upon a `.reduceBy` operation on windows of size one. */
   @Test
   public void testReductionType0() {
-    execute(new AbstractTestCase<Integer, Pair<Integer, Set<Integer>>>(
-        /* don't parallelize this test, because it doesn't work
-         * well with count windows */
-        1) {
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
-      }
+    execute(
+        new AbstractTestCase<Integer, Pair<Integer, Set<Integer>>>(
+            /* don't parallelize this test, because it doesn't work
+             * well with count windows */
+            1) {
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
+          }
 
-      @Override
-      protected Dataset<Pair<Integer, Set<Integer>>>
-      getOutput(Dataset<Integer> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e % 2)
-            .valueBy(e -> e)
-            .reduceBy(s -> s.collect(Collectors.toSet()))
-            .windowBy(Count.of(3))
-            .output();
-      }
+          @Override
+          protected Dataset<Pair<Integer, Set<Integer>>> getOutput(Dataset<Integer> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e % 2)
+                .valueBy(e -> e)
+                .reduceBy(s -> s.collect(Collectors.toSet()))
+                .windowBy(Count.of(3))
+                .output();
+          }
 
-      @Override
-      public List<Pair<Integer, Set<Integer>>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of(0, Sets.newHashSet(2, 4, 6)),
-            Pair.of(1, Sets.newHashSet(1, 3, 5)),
-            Pair.of(1, Sets.newHashSet(7, 9)));
-      }
-    });
+          @Override
+          public List<Pair<Integer, Set<Integer>>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of(0, Sets.newHashSet(2, 4, 6)),
+                Pair.of(1, Sets.newHashSet(1, 3, 5)),
+                Pair.of(1, Sets.newHashSet(7, 9)));
+          }
+        });
   }
 
   /** Validates the output type upon a `.reduceBy` operation on windows of size one. */
   @Test
   public void testReductionType0_outputValues() {
-    execute(new AbstractTestCase<Integer, Set<Integer>>(
-        /* don't parallelize this test, because it doesn't work
-         * well with count windows */
-        1) {
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
-      }
+    execute(
+        new AbstractTestCase<Integer, Set<Integer>>(
+            /* don't parallelize this test, because it doesn't work
+             * well with count windows */
+            1) {
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
+          }
 
-      @Override
-      protected Dataset<Set<Integer>>
-      getOutput(Dataset<Integer> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e % 2)
-            .valueBy(e -> e)
-            .reduceBy(s -> s.collect(Collectors.toSet()))
-            .windowBy(Count.of(3))
-            .outputValues();
-      }
+          @Override
+          protected Dataset<Set<Integer>> getOutput(Dataset<Integer> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e % 2)
+                .valueBy(e -> e)
+                .reduceBy(s -> s.collect(Collectors.toSet()))
+                .windowBy(Count.of(3))
+                .outputValues();
+          }
 
-      @Override
-      public List<Set<Integer>> getUnorderedOutput() {
-        return Arrays.asList(
-            Sets.newHashSet(2, 4, 6),
-            Sets.newHashSet(1, 3, 5),
-            Sets.newHashSet(7, 9));
-      }
-    });
+          @Override
+          public List<Set<Integer>> getUnorderedOutput() {
+            return Arrays.asList(
+                Sets.newHashSet(2, 4, 6), Sets.newHashSet(1, 3, 5), Sets.newHashSet(7, 9));
+          }
+        });
   }
-
 
   /** Validates the output type upon a `.reduceBy` operation on windows of size one. */
   @Test
   public void testReductionType0WithSortedValues() {
-    execute(new AbstractTestCase<Integer, List<Pair<Integer, List<Integer>>>>(
-        /* don't parallelize this test, because it doesn't work
-         * well with count windows */
-        1) {
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(9, 8, 7, 6, 5, 4, 3, 2, 1);
-      }
+    execute(
+        new AbstractTestCase<Integer, List<Pair<Integer, List<Integer>>>>(
+            /* don't parallelize this test, because it doesn't work
+             * well with count windows */
+            1) {
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(9, 8, 7, 6, 5, 4, 3, 2, 1);
+          }
 
-      @Override
-      protected Dataset<List<Pair<Integer, List<Integer>>>>
-      getOutput(Dataset<Integer> input) {
-        Dataset<Pair<Integer, List<Integer>>> reducedByWindow = ReduceByKey.of(input)
-            .keyBy(e -> e % 2)
-            .valueBy(e -> e)
-            .reduceBy(s -> s.collect(Collectors.toList()))
-            .withSortedValues(Integer::compare)
-            .windowBy(Count.of(3))
-            .output();
+          @Override
+          protected Dataset<List<Pair<Integer, List<Integer>>>> getOutput(Dataset<Integer> input) {
+            Dataset<Pair<Integer, List<Integer>>> reducedByWindow =
+                ReduceByKey.of(input)
+                    .keyBy(e -> e % 2)
+                    .valueBy(e -> e)
+                    .reduceBy(s -> s.collect(Collectors.toList()))
+                    .withSortedValues(Integer::compare)
+                    .windowBy(Count.of(3))
+                    .output();
 
-        return ReduceWindow.of(reducedByWindow)
-            .reduceBy(s -> s.collect(Collectors.toList()))
-            .withSortedValues((l, r) -> {
-              int cmp = l.getFirst().compareTo(r.getFirst());
-              if (cmp == 0) {
-                int firstLeft = l.getSecond().get(0);
-                int firstRight = r.getSecond().get(0);
-                cmp = Integer.compare(firstLeft, firstRight);
-              }
-              return cmp;
-            })
-            .windowBy(GlobalWindowing.get())
-            .output();
-      }
+            return ReduceWindow.of(reducedByWindow)
+                .reduceBy(s -> s.collect(Collectors.toList()))
+                .withSortedValues(
+                    (l, r) -> {
+                      int cmp = l.getFirst().compareTo(r.getFirst());
+                      if (cmp == 0) {
+                        int firstLeft = l.getSecond().get(0);
+                        int firstRight = r.getSecond().get(0);
+                        cmp = Integer.compare(firstLeft, firstRight);
+                      }
+                      return cmp;
+                    })
+                .windowBy(GlobalWindowing.get())
+                .output();
+          }
 
-      @Override
-      public void validate(
-          List<List<Pair<Integer, List<Integer>>>> outputs) throws AssertionError {
+          @Override
+          public void validate(List<List<Pair<Integer, List<Integer>>>> outputs)
+              throws AssertionError {
 
-        assertEquals(1, outputs.size());
-        assertEquals(Lists.newArrayList(
-            Pair.of(0, Lists.newArrayList(2)),
-            Pair.of(0, Lists.newArrayList(4, 6, 8)),
-            Pair.of(1, Lists.newArrayList(1, 3)),
-            Pair.of(1, Lists.newArrayList(5, 7, 9))),
-            outputs.get(0));
-      }
-
-    });
+            assertEquals(1, outputs.size());
+            assertEquals(
+                Lists.newArrayList(
+                    Pair.of(0, Lists.newArrayList(2)),
+                    Pair.of(0, Lists.newArrayList(4, 6, 8)),
+                    Pair.of(1, Lists.newArrayList(1, 3)),
+                    Pair.of(1, Lists.newArrayList(5, 7, 9))),
+                outputs.get(0));
+          }
+        });
   }
-
 
   /** Validates the output type upon a `.reduceBy` operation on windows of size one. */
   @Test
   public void testReductionType0MultiValues() {
-    execute(new AbstractTestCase<Integer, Pair<Integer, Integer>>(
-        /* don't parallelize this test, because it doesn't work
-         * well with count windows */
-        1) {
+    execute(
+        new AbstractTestCase<Integer, Pair<Integer, Integer>>(
+            /* don't parallelize this test, because it doesn't work
+             * well with count windows */
+            1) {
 
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
-      }
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(1, 2, 3, 4, 5, 6, 7, 9);
+          }
 
-      @Override
-      protected Dataset<Pair<Integer, Integer>>
-      getOutput(Dataset<Integer> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e % 2)
-            .reduceBy(Fold.whileEmittingEach(0, (a, b) -> a + b))
-            .windowBy(Count.of(3))
-            .output();
-      }
+          @Override
+          protected Dataset<Pair<Integer, Integer>> getOutput(Dataset<Integer> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e % 2)
+                .reduceBy(Fold.whileEmittingEach(0, (a, b) -> a + b))
+                .windowBy(Count.of(3))
+                .output();
+          }
 
-      @Override
-      public void validate(List<Pair<Integer, Integer>> output) {
-        Map<Integer, List<Integer>> byKey = output.stream()
-            .collect(Collectors.groupingBy(Pair::getFirst,
-                Collectors.mapping(Pair::getSecond, Collectors.toList())));
+          @Override
+          public void validate(List<Pair<Integer, Integer>> output) {
+            Map<Integer, List<Integer>> byKey =
+                output
+                    .stream()
+                    .collect(
+                        Collectors.groupingBy(
+                            Pair::getFirst,
+                            Collectors.mapping(Pair::getSecond, Collectors.toList())));
 
-        assertEquals(2, byKey.size());
+            assertEquals(2, byKey.size());
 
-        assertNotNull(byKey.get(0));
-        assertEquals(3, byKey.get(0).size());
-        assertEquals(Arrays.asList(2, 6, 12), byKey.get(0));
+            assertNotNull(byKey.get(0));
+            assertEquals(3, byKey.get(0).size());
+            assertEquals(Arrays.asList(2, 6, 12), byKey.get(0));
 
-        assertNotNull(byKey.get(1));
-        assertEquals(
-            Sets.newHashSet(1, 4, 9, 7, 16),
-            new HashSet<>(byKey.get(1)));
-      }
+            assertNotNull(byKey.get(1));
+            assertEquals(Sets.newHashSet(1, 4, 9, 7, 16), new HashSet<>(byKey.get(1)));
+          }
 
-      @Override
-      public List<Pair<Integer, Integer>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of(0, 12),
-            Pair.of(1, 9),
-            Pair.of(1, 16));
-      }
-    });
+          @Override
+          public List<Pair<Integer, Integer>> getUnorderedOutput() {
+            return Arrays.asList(Pair.of(0, 12), Pair.of(1, 9), Pair.of(1, 16));
+          }
+        });
   }
-
 
   @Test
   public void testEventTime() {
-    execute(new AbstractTestCase<Pair<Integer, Long>, Pair<Integer, Long>>() {
+    execute(
+        new AbstractTestCase<Pair<Integer, Long>, Pair<Integer, Long>>() {
 
+          @Override
+          protected Dataset<Pair<Integer, Long>> getOutput(Dataset<Pair<Integer, Long>> input) {
+            input = AssignEventTime.of(input).using(Pair::getSecond).output();
+            return ReduceByKey.of(input)
+                .keyBy(Pair::getFirst)
+                .valueBy(e -> 1L)
+                .combineBy(Sums.ofLongs())
+                .windowBy(Time.of(Duration.ofSeconds(1)))
+                .output();
+          }
+
+          @Override
+          protected List<Pair<Integer, Long>> getInput() {
+            return Arrays.asList(
+                Pair.of(1, 300L),
+                Pair.of(2, 600L),
+                Pair.of(3, 900L),
+                Pair.of(2, 1300L),
+                Pair.of(3, 1600L),
+                Pair.of(1, 1900L),
+                Pair.of(3, 2300L),
+                Pair.of(2, 2600L),
+                Pair.of(1, 2900L),
+                Pair.of(2, 3300L),
+                Pair.of(2, 300L),
+                Pair.of(4, 600L),
+                Pair.of(3, 900L),
+                Pair.of(4, 1300L),
+                Pair.of(2, 1600L),
+                Pair.of(3, 1900L),
+                Pair.of(4, 2300L),
+                Pair.of(1, 2600L),
+                Pair.of(3, 2900L),
+                Pair.of(4, 3300L),
+                Pair.of(3, 3600L));
+          }
+
+          @Override
+          public List<Pair<Integer, Long>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of(2, 2L),
+                Pair.of(4, 1L), // first window
+                Pair.of(2, 2L),
+                Pair.of(4, 1L), // second window
+                Pair.of(2, 1L),
+                Pair.of(4, 1L), // third window
+                Pair.of(2, 1L),
+                Pair.of(4, 1L), // fourth window
+                Pair.of(1, 1L),
+                Pair.of(3, 2L), // first window
+                Pair.of(1, 1L),
+                Pair.of(3, 2L), // second window
+                Pair.of(1, 2L),
+                Pair.of(3, 2L), // third window
+                Pair.of(3, 1L)); // fourth window
+          }
+        });
+  }
+
+  @Test
+  public void testReduceWithWindowing() {
+    execute(
+        new AbstractTestCase<Integer, Pair<Integer, Long>>() {
+          @Override
+          protected Dataset<Pair<Integer, Long>> getOutput(Dataset<Integer> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e % 3)
+                .valueBy(e -> 1L)
+                .combineBy(Sums.ofLongs())
+                .windowBy(new TestWindowing())
+                .output();
+          }
+
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(
+                1,
+                2,
+                3 /* first window, keys 1, 2, 0 */,
+                4,
+                5,
+                6,
+                7 /* second window, keys 1, 2, 0, 1 */,
+                8,
+                9,
+                10 /* third window, keys 2, 0, 1 */,
+                5,
+                6,
+                7 /* second window, keys 2, 0, 1 */,
+                8,
+                9,
+                10,
+                11 /* third window, keys 2, 0, 1, 2 */,
+                12,
+                13,
+                14,
+                15 /* fourth window, keys 0, 1, 2, 0 */);
+          }
+
+          @Override
+          public List<Pair<Integer, Long>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of(0, 1L),
+                Pair.of(2, 1L) /* first window */,
+                Pair.of(0, 2L),
+                Pair.of(2, 2L) /* second window */,
+                Pair.of(0, 2L),
+                Pair.of(2, 3L) /* third window */,
+                Pair.of(0, 2L),
+                Pair.of(2, 1L) /* fourth window */,
+                Pair.of(1, 1L) /* first window*/,
+                Pair.of(1, 3L) /* second window */,
+                Pair.of(1, 2L) /* third window */,
+                Pair.of(1, 1L) /* fourth window */);
+          }
+        });
+  }
+
+  // ~ Makes no sense to test UNBOUNDED input without windowing defined.
+  // It would run infinitely without providing any result.
+  @Processing(Processing.Type.BOUNDED)
+  @Test
+  public void testReduceWithoutWindowing() {
+    execute(
+        new AbstractTestCase<String, Pair<String, Long>>() {
+          @Override
+          protected List<String> getInput() {
+            String[] words =
+                "one two three four one two three four one two three one two one".split(" ");
+            return Arrays.asList(words);
+          }
+
+          @Override
+          public List<Pair<String, Long>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of("one", 5L), Pair.of("two", 4L), Pair.of("three", 3L), Pair.of("four", 2L));
+          }
+
+          @Override
+          protected Dataset<Pair<String, Long>> getOutput(Dataset<String> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e, TypeHint.of(String.class))
+                .valueBy(e -> 1L, TypeHint.of(Long.class))
+                .combineBy(Sums.ofLongs(), TypeHint.of(Long.class))
+                .output();
+          }
+        });
+  }
+
+  @Processing(Processing.Type.BOUNDED)
+  @Test
+  public void testReduceSorted() {
+    execute(
+        new AbstractTestCase<Pair<String, Long>, Pair<String, List<Long>>>() {
+
+          @Override
+          protected List<Pair<String, Long>> getInput() {
+            return Arrays.asList(
+                Pair.of("one", 3L),
+                Pair.of("one", 2L),
+                Pair.of("one", 1L),
+                Pair.of("two", 3L),
+                Pair.of("two", 2L),
+                Pair.of("two", 1L),
+                Pair.of("three", 3L),
+                Pair.of("three", 2L),
+                Pair.of("three", 1L));
+          }
+
+          @Override
+          public List<Pair<String, List<Long>>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of("one", Arrays.asList(1L, 2L, 3L)),
+                Pair.of("two", Arrays.asList(1L, 2L, 3L)),
+                Pair.of("three", Arrays.asList(1L, 2L, 3L)));
+          }
+
+          @Override
+          protected Dataset<Pair<String, List<Long>>> getOutput(Dataset<Pair<String, Long>> input) {
+            return ReduceByKey.of(input)
+                .keyBy(Pair::getFirst)
+                .valueBy(Pair::getSecond)
+                .reduceBy(
+                    (Stream<Long> values, Collector<List<Long>> coll) ->
+                        coll.collect(values.collect(Collectors.toList())))
+                .withSortedValues(Long::compareTo)
+                .output();
+          }
+        });
+  }
+
+  @Test
+  public void testMergingAndTriggering() {
+    execute(
+        new AbstractTestCase<Pair<String, Long>, Pair<String, Long>>(1) {
+
+          @Override
+          protected List<Pair<String, Long>> getInput() {
+            return Arrays.asList(
+                Pair.of("a", 20L),
+                Pair.of("c", 3000L),
+                Pair.of("b", 10L),
+                Pair.of("b", 100L),
+                Pair.of("a", 4000L),
+                Pair.of("c", 300L),
+                Pair.of("b", 1000L),
+                Pair.of("b", 50000L),
+                Pair.of("a", 100000L),
+                Pair.of("a", 800L),
+                Pair.of("a", 80L));
+          }
+
+          @Override
+          protected Dataset<Pair<String, Long>> getOutput(Dataset<Pair<String, Long>> input) {
+            return ReduceByKey.of(input)
+                .keyBy(Pair::getFirst)
+                .valueBy(Pair::getSecond)
+                .combineBy(Sums.ofLongs())
+                .windowBy(new CWindowing<>(3))
+                .output();
+          }
+
+          @SuppressWarnings("unchecked")
+          @Override
+          public List<Pair<String, Long>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of("a", 880L),
+                Pair.of("a", 104020L),
+                Pair.of("b", 1110L),
+                Pair.of("b", 50000L),
+                Pair.of("c", 3300L));
+          }
+        });
+  }
+
+  // ----------------------------------------------------------------------------
+
+  @Test
+  public void testSessionWindowing() {
+    execute(
+        new AbstractTestCase<Pair<String, Integer>, Triple<TimeInterval, Integer, Set<String>>>() {
+
+          @Override
+          protected List<Pair<String, Integer>> getInput() {
+            return Arrays.asList(
+                Pair.of("1-one", 1),
+                Pair.of("2-one", 2),
+                Pair.of("1-two", 4),
+                Pair.of("1-three", 8),
+                Pair.of("1-four", 10),
+                Pair.of("2-two", 10),
+                Pair.of("1-five", 18),
+                Pair.of("2-three", 20),
+                Pair.of("1-six", 22));
+          }
+
+          @Override
+          protected Dataset<Triple<TimeInterval, Integer, Set<String>>> getOutput(
+              Dataset<Pair<String, Integer>> input) {
+            input = AssignEventTime.of(input).using(Pair::getSecond).output();
+            Dataset<Pair<Integer, Set<String>>> reduced =
+                ReduceByKey.of(input)
+                    .keyBy(e -> e.getFirst().charAt(0) - '0')
+                    .valueBy(Pair::getFirst)
+                    .reduceBy(s -> s.collect(Collectors.toSet()))
+                    .windowBy(Session.of(Duration.ofMillis(5)))
+                    .output();
+
+            return FlatMap.of(reduced)
+                .using(
+                    (UnaryFunctor<
+                            Pair<Integer, Set<String>>, Triple<TimeInterval, Integer, Set<String>>>)
+                        (elem, context) ->
+                            context.collect(
+                                Triple.of(
+                                    (TimeInterval) context.getWindow(),
+                                    elem.getFirst(),
+                                    elem.getSecond())))
+                .output();
+          }
+
+          @Override
+          public List<Triple<TimeInterval, Integer, Set<String>>> getUnorderedOutput() {
+            return Arrays.asList(
+                Triple.of(
+                    new TimeInterval(1, 15),
+                    1,
+                    Sets.newHashSet("1-four", "1-one", "1-three", "1-two")),
+                Triple.of(new TimeInterval(10, 15), 2, Sets.newHashSet("2-two")),
+                Triple.of(new TimeInterval(18, 27), 1, Sets.newHashSet("1-five", "1-six")),
+                Triple.of(new TimeInterval(2, 7), 2, Sets.newHashSet("2-one")),
+                Triple.of(new TimeInterval(20, 25), 2, Sets.newHashSet("2-three")));
+          }
+        });
+  }
+
+  @Test
+  public void testElementTimestamp() {
+    class AssertingWindowing<T> implements Windowing<T, TimeInterval> {
       @Override
-      protected Dataset<Pair<Integer, Long>> getOutput(Dataset<Pair<Integer, Long>> input) {
-        input = AssignEventTime.of(input).using(Pair::getSecond).output();
-        return ReduceByKey.of(input)
-            .keyBy(Pair::getFirst)
-            .valueBy(e -> 1L)
-            .combineBy(Sums.ofLongs())
-            .windowBy(Time.of(Duration.ofSeconds(1)))
-            .output();
+      public Iterable<TimeInterval> assignWindowsToElement(WindowedElement<?, T> el) {
+        // ~ we expect the 'element time' to be the end of the window which produced the
+        // element in the preceding upstream (stateful and windowed) operator
+        assertTrue(
+            "Invalid timestamp " + el.getTimestamp(),
+            el.getTimestamp() == 15_000L - 1 || el.getTimestamp() == 25_000L - 1);
+        return Collections.singleton(new TimeInterval(0, Long.MAX_VALUE));
+      }
+
+      @SuppressWarnings("unchecked")
+      @Override
+      public Trigger<TimeInterval> getTrigger() {
+        return new CountTrigger(1) {
+          @Override
+          public boolean isStateful() {
+            return false;
+          }
+
+          @Override
+          public TriggerResult onElement(long time, Window window, TriggerContext ctx) {
+            // ~ we expect the 'time' to be the end of the window which produced the
+            // element in the preceding upstream (stateful and windowed) operator
+            assertTrue("Invalid timestamp " + time, time == 15_000L - 1 || time == 25_000L - 1);
+            return super.onElement(time, window, ctx);
+          }
+        };
       }
 
       @Override
-      protected List<Pair<Integer, Long>> getInput() {
-        return Arrays.asList(
-            Pair.of(1, 300L), Pair.of(2, 600L), Pair.of(3, 900L),
-            Pair.of(2, 1300L), Pair.of(3, 1600L), Pair.of(1, 1900L),
-            Pair.of(3, 2300L), Pair.of(2, 2600L), Pair.of(1, 2900L),
-            Pair.of(2, 3300L),
-            Pair.of(2, 300L), Pair.of(4, 600L), Pair.of(3, 900L),
-            Pair.of(4, 1300L), Pair.of(2, 1600L), Pair.of(3, 1900L),
-            Pair.of(4, 2300L), Pair.of(1, 2600L), Pair.of(3, 2900L),
-            Pair.of(4, 3300L), Pair.of(3, 3600L));
+      public boolean equals(Object obj) {
+        return obj instanceof AssertingWindowing;
       }
 
       @Override
-      public List<Pair<Integer, Long>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of(2, 2L), Pair.of(4, 1L),  // first window
-            Pair.of(2, 2L), Pair.of(4, 1L),  // second window
-            Pair.of(2, 1L), Pair.of(4, 1L),  // third window
-            Pair.of(2, 1L), Pair.of(4, 1L),  // fourth window
-            Pair.of(1, 1L), Pair.of(3, 2L),  // first window
-            Pair.of(1, 1L), Pair.of(3, 2L),  // second window
-            Pair.of(1, 2L), Pair.of(3, 2L),  // third window
-            Pair.of(3, 1L));                 // fourth window
+      public int hashCode() {
+        return 0;
       }
-    });
+    }
+
+    execute(
+        new AbstractTestCase<Pair<Integer, Long>, Integer>() {
+          @Override
+          protected List<Pair<Integer, Long>> getInput() {
+            return Arrays.asList(
+                // ~ Pair.of(value, time)
+                Pair.of(1, 10_123L),
+                Pair.of(2, 11_234L),
+                Pair.of(3, 12_345L),
+                // ~ note: exactly one element for the window on purpose (to test out
+                // all is well even in case our `.combineBy` user function is not called.)
+                Pair.of(4, 21_456L));
+          }
+
+          @Override
+          protected Dataset<Integer> getOutput(Dataset<Pair<Integer, Long>> input) {
+            // ~ this operator is supposed to emit elements internally with a timestamp
+            // which equals the emission (== end in this case) of the time window
+            input = AssignEventTime.of(input).using(Pair::getSecond).output();
+            Dataset<Pair<String, Integer>> reduced =
+                ReduceByKey.of(input)
+                    .keyBy(e -> "", TypeHint.ofString())
+                    .valueBy(Pair::getFirst, TypeHint.ofInt())
+                    .combineBy(Sums.ofInts(), TypeHint.ofInt())
+                    .windowBy(Time.of(Duration.ofSeconds(5)))
+                    .output();
+            // ~ now use a custom windowing with a trigger which does
+            // the assertions subject to this test (use RSBK which has to
+            // use triggering, unlike an optimized RBK)
+            Dataset<Pair<String, Integer>> output =
+                ReduceStateByKey.of(reduced)
+                    .keyBy(Pair::getFirst)
+                    .valueBy(Pair::getSecond)
+                    .stateFactory(SumState::new)
+                    .mergeStatesBy(SumState::combine)
+                    .windowBy(new AssertingWindowing<>())
+                    .output();
+            return FlatMap.of(output)
+                .using(
+                    (UnaryFunctor<Pair<String, Integer>, Integer>)
+                        (elem, context) -> context.collect(elem.getSecond()))
+                .output();
+          }
+
+          @Override
+          public List<Integer> getUnorderedOutput() {
+            return Arrays.asList(4, 6);
+          }
+        });
+  }
+
+  @Test
+  public void testReduceByKeyWithWrongHashCodeImpl() {
+    execute(
+        new AbstractTestCase<Pair<Word, Long>, Pair<Word, Long>>() {
+
+          @Override
+          protected Dataset<Pair<Word, Long>> getOutput(Dataset<Pair<Word, Long>> input) {
+            input = AssignEventTime.of(input).using(Pair::getSecond).output();
+            return ReduceByKey.of(input)
+                .keyBy(Pair::getFirst)
+                .valueBy(e -> 1L)
+                .combineBy(Sums.ofLongs())
+                .windowBy(Time.of(Duration.ofSeconds(1)))
+                .output();
+          }
+
+          @Override
+          protected List<Pair<Word, Long>> getInput() {
+            return Arrays.asList(
+                Pair.of(new Word("euphoria"), 300L),
+                Pair.of(new Word("euphoria"), 600L),
+                Pair.of(new Word("spark"), 900L),
+                Pair.of(new Word("euphoria"), 1300L),
+                Pair.of(new Word("flink"), 1600L),
+                Pair.of(new Word("spark"), 1900L));
+          }
+
+          @Override
+          public List<Pair<Word, Long>> getUnorderedOutput() {
+            return Arrays.asList(
+                Pair.of(new Word("euphoria"), 2L),
+                Pair.of(new Word("spark"), 1L), // first window
+                Pair.of(new Word("euphoria"), 1L),
+                Pair.of(new Word("spark"), 1L), // second window
+                Pair.of(new Word("flink"), 1L));
+          }
+        });
+  }
+
+  @Test
+  public void testAccumulators() {
+    execute(
+        new AbstractTestCase<Integer, Pair<Integer, Integer>>() {
+          @Override
+          protected List<Integer> getInput() {
+            return Arrays.asList(1, 2, 3, 4, 5);
+          }
+
+          @Override
+          protected Dataset<Pair<Integer, Integer>> getOutput(Dataset<Integer> input) {
+            return ReduceByKey.of(input)
+                .keyBy(e -> e % 2)
+                .valueBy(e -> e)
+                .reduceBy(
+                    Fold.of(
+                        0,
+                        (Integer a, Integer b, Collector<Integer> ctx) -> {
+                          if (b % 2 == 0) {
+                            ctx.getCounter("evens").increment();
+                          } else {
+                            ctx.getCounter("odds").increment();
+                          }
+                          ctx.collect(a + b);
+                        }))
+                .windowBy(GlobalWindowing.get())
+                .output();
+          }
+
+          @SuppressWarnings("unchecked")
+          @Override
+          public List<Pair<Integer, Integer>> getUnorderedOutput() {
+            return Arrays.asList(Pair.of(1, 9), Pair.of(0, 6));
+          }
+
+          @Override
+          public void validateAccumulators(SnapshotProvider snapshots) {
+            Map<String, Long> counters = snapshots.getCounterSnapshots();
+            assertEquals(Long.valueOf(2), counters.get("evens"));
+            assertEquals(Long.valueOf(3), counters.get("odds"));
+          }
+        });
   }
 
   static class TestWindowing implements Windowing<Integer, IntWindow> {
@@ -311,135 +741,27 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
     public int hashCode() {
       return 0;
     }
-
   }
 
-  @Test
-  public void testReduceWithWindowing() {
-    execute(new AbstractTestCase<Integer, Pair<Integer, Long>>() {
-      @Override
-      protected Dataset<Pair<Integer, Long>> getOutput(Dataset<Integer> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e % 3)
-            .valueBy(e -> 1L)
-            .combineBy(Sums.ofLongs())
-            .windowBy(new TestWindowing())
-            .output();
-      }
-
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(
-            1, 2, 3 /* first window, keys 1, 2, 0 */,
-            4, 5, 6, 7 /* second window, keys 1, 2, 0, 1 */,
-            8, 9, 10 /* third window, keys 2, 0, 1 */,
-            5, 6, 7 /* second window, keys 2, 0, 1 */,
-            8, 9, 10, 11 /* third window, keys 2, 0, 1, 2 */,
-            12, 13, 14, 15 /* fourth window, keys 0, 1, 2, 0 */);
-      }
-
-      @Override
-      public List<Pair<Integer, Long>> getUnorderedOutput() {
-        return Arrays.asList(Pair.of(0, 1L), Pair.of(2, 1L) /* first window */,
-            Pair.of(0, 2L), Pair.of(2, 2L) /* second window */,
-            Pair.of(0, 2L), Pair.of(2, 3L) /* third window */,
-            Pair.of(0, 2L), Pair.of(2, 1L) /* fourth window */,
-            Pair.of(1, 1L) /* first window*/,
-            Pair.of(1, 3L) /* second window */,
-            Pair.of(1, 2L) /* third window */,
-            Pair.of(1, 1L) /* fourth window */);
-      }
-    });
-  }
-
-  // ~ Makes no sense to test UNBOUNDED input without windowing defined.
-  // It would run infinitely without providing any result.
-  @Processing(Processing.Type.BOUNDED)
-  @Test
-  public void testReduceWithoutWindowing() {
-    execute(new AbstractTestCase<String, Pair<String, Long>>() {
-      @Override
-      protected List<String> getInput() {
-        String[] words =
-            "one two three four one two three four one two three one two one".split(" ");
-        return Arrays.asList(words);
-      }
-
-      @Override
-      public List<Pair<String, Long>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of("one", 5L),
-            Pair.of("two", 4L),
-            Pair.of("three", 3L),
-            Pair.of("four", 2L));
-      }
-
-      @Override
-      protected Dataset<Pair<String, Long>> getOutput(Dataset<String> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e, TypeHint.of(String.class))
-            .valueBy(e -> 1L, TypeHint.of(Long.class))
-            .combineBy(Sums.ofLongs(), TypeHint.of(Long.class))
-            .output();
-      }
-    });
-  }
-
-  @Processing(Processing.Type.BOUNDED)
-  @Test
-  public void testReduceSorted() {
-    execute(new AbstractTestCase<Pair<String, Long>, Pair<String, List<Long>>>() {
-
-      @Override
-      protected List<Pair<String, Long>> getInput() {
-        return Arrays.asList(
-            Pair.of("one", 3L), Pair.of("one", 2L), Pair.of("one", 1L),
-            Pair.of("two", 3L), Pair.of("two", 2L), Pair.of("two", 1L),
-            Pair.of("three", 3L), Pair.of("three", 2L), Pair.of("three", 1L));
-      }
-
-      @Override
-      public List<Pair<String, List<Long>>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of("one", Arrays.asList(1L, 2L, 3L)),
-            Pair.of("two", Arrays.asList(1L, 2L, 3L)),
-            Pair.of("three", Arrays.asList(1L, 2L, 3L)));
-      }
-
-      @Override
-      protected Dataset<Pair<String, List<Long>>> getOutput(Dataset<Pair<String, Long>> input) {
-        return ReduceByKey.of(input)
-            .keyBy(Pair::getFirst)
-            .valueBy(Pair::getSecond)
-            .reduceBy((Stream<Long> values, Collector<List<Long>> coll) ->
-                coll.collect(values.collect(Collectors.toList())))
-            .withSortedValues(Long::compareTo)
-            .output();
-      }
-    });
-  }
-
-  // ----------------------------------------------------------------------------
+  // ~ ------------------------------------------------------------------------------
 
   // ~ every instance is unique: this allows us to exercise merging
   public static final class CWindow extends Window<CWindow> {
 
-    static int _idCounter = 0;
     static final Object _idCounterMutex = new Object();
-
-    static int new_id() {
-      synchronized (_idCounterMutex) {
-        return ++_idCounter;
-      }
-    }
-
+    static int _idCounter = 0;
     private final int _id;
-
     private final int bucket;
 
     public CWindow(int bucket) {
       this._id = new_id();
       this.bucket = bucket;
+    }
+
+    static int new_id() {
+      synchronized (_idCounterMutex) {
+        return ++_idCounter;
+      }
     }
 
     @Override
@@ -459,10 +781,7 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
 
     @Override
     public String toString() {
-      return "CWindow{" +
-          "bucket=" + bucket +
-          ", identity=" + _id +
-          '}';
+      return "CWindow{" + "bucket=" + bucket + ", identity=" + _id + '}';
     }
   }
 
@@ -510,8 +829,8 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
     }
 
     @Override
-    public Collection<Pair<Collection<CWindow>, CWindow>>
-    mergeWindows(Collection<CWindow> actives) {
+    public Collection<Pair<Collection<CWindow>, CWindow>> mergeWindows(
+        Collection<CWindow> actives) {
       Map<Integer, List<CWindow>> byMergeType = new HashMap<>();
       for (CWindow cw : actives) {
         byMergeType.computeIfAbsent(cw.bucket, k -> new ArrayList<>()).add(cw);
@@ -543,116 +862,22 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
     public int hashCode() {
       return size;
     }
-
-
   }
-
-  @Test
-  public void testMergingAndTriggering() {
-    execute(new AbstractTestCase<Pair<String, Long>, Pair<String, Long>>(1) {
-
-      @Override
-      protected List<Pair<String, Long>> getInput() {
-        return Arrays.asList(
-            Pair.of("a", 20L),
-            Pair.of("c", 3000L),
-            Pair.of("b", 10L),
-            Pair.of("b", 100L),
-            Pair.of("a", 4000L),
-            Pair.of("c", 300L),
-            Pair.of("b", 1000L),
-            Pair.of("b", 50000L),
-            Pair.of("a", 100000L),
-            Pair.of("a", 800L),
-            Pair.of("a", 80L));
-      }
-
-      @Override
-      protected Dataset<Pair<String, Long>>
-      getOutput(Dataset<Pair<String, Long>> input) {
-        return ReduceByKey.of(input)
-            .keyBy(Pair::getFirst)
-            .valueBy(Pair::getSecond)
-            .combineBy(Sums.ofLongs())
-            .windowBy(new CWindowing<>(3))
-            .output();
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public List<Pair<String, Long>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of("a", 880L),
-            Pair.of("a", 104020L),
-            Pair.of("b", 1110L),
-            Pair.of("b", 50000L),
-            Pair.of("c", 3300L));
-      }
-    });
-  }
-
-  @Test
-  public void testSessionWindowing() {
-    execute(new AbstractTestCase<
-        Pair<String, Integer>,
-        Triple<TimeInterval, Integer, Set<String>>>() {
-
-      @Override
-      protected List<Pair<String, Integer>> getInput() {
-        return Arrays.asList(
-            Pair.of("1-one", 1),
-            Pair.of("2-one", 2),
-            Pair.of("1-two", 4),
-            Pair.of("1-three", 8),
-            Pair.of("1-four", 10),
-            Pair.of("2-two", 10),
-            Pair.of("1-five", 18),
-            Pair.of("2-three", 20),
-            Pair.of("1-six", 22));
-      }
-
-      @Override
-      protected Dataset<Triple<TimeInterval, Integer, Set<String>>> getOutput
-          (Dataset<Pair<String, Integer>> input) {
-        input = AssignEventTime.of(input).using(Pair::getSecond).output();
-        Dataset<Pair<Integer, Set<String>>> reduced =
-            ReduceByKey.of(input)
-                .keyBy(e -> e.getFirst().charAt(0) - '0')
-                .valueBy(Pair::getFirst)
-                .reduceBy(s -> s.collect(Collectors.toSet()))
-                .windowBy(Session.of(Duration.ofMillis(5)))
-                .output();
-
-        return FlatMap.of(reduced)
-            .using((UnaryFunctor<Pair<Integer, Set<String>>,
-                Triple<TimeInterval, Integer, Set<String>>>)
-                (elem, context) -> context.collect(Triple.of((TimeInterval) context.getWindow(),
-                    elem.getFirst(), elem.getSecond())))
-            .output();
-      }
-
-      @Override
-      public List<Triple<TimeInterval, Integer, Set<String>>> getUnorderedOutput() {
-        return Arrays.asList(
-            Triple.of(new TimeInterval(1, 15), 1, Sets.newHashSet(
-                "1-four", "1-one", "1-three", "1-two")),
-            Triple.of(new TimeInterval(10, 15), 2, Sets.newHashSet("2-two")),
-            Triple.of(new TimeInterval(18, 27), 1, Sets.newHashSet("1-five", "1-six")),
-            Triple.of(new TimeInterval(2, 7), 2, Sets.newHashSet("2-one")),
-            Triple.of(new TimeInterval(20, 25), 2, Sets.newHashSet("2-three")));
-      }
-
-    });
-  }
-
-  // ~ ------------------------------------------------------------------------------
 
   static class SumState implements State<Integer, Integer> {
     private final ValueStorage<Integer> sum;
 
     SumState(StateContext context, Collector<Integer> collector) {
-      sum = context.getStorageProvider().getValueStorage(
-          ValueStorageDescriptor.of("sum-state", Integer.class, 0));
+      sum =
+          context
+              .getStorageProvider()
+              .getValueStorage(ValueStorageDescriptor.of("sum-state", Integer.class, 0));
+    }
+
+    static void combine(SumState target, Iterable<SumState> others) {
+      for (SumState other : others) {
+        target.add(other.sum.get());
+      }
     }
 
     @Override
@@ -669,188 +894,9 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
     public void close() {
       sum.clear();
     }
-
-    static void combine(SumState target, Iterable<SumState> others) {
-      for (SumState other : others) {
-        target.add(other.sum.get());
-      }
-    }
   }
 
-  @Test
-  public void testElementTimestamp() {
-    class AssertingWindowing<T> implements Windowing<T, TimeInterval> {
-      @Override
-      public Iterable<TimeInterval> assignWindowsToElement(WindowedElement<?, T> el) {
-        // ~ we expect the 'element time' to be the end of the window which produced the
-        // element in the preceding upstream (stateful and windowed) operator
-        assertTrue("Invalid timestamp " + el.getTimestamp(),
-            el.getTimestamp() == 15_000L - 1 || el.getTimestamp() == 25_000L - 1);
-        return Collections.singleton(new TimeInterval(0, Long.MAX_VALUE));
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public Trigger<TimeInterval> getTrigger() {
-        return new CountTrigger(1) {
-          @Override
-          public boolean isStateful() {
-            return false;
-          }
-
-          @Override
-          public TriggerResult onElement(long time, Window window, TriggerContext ctx) {
-            // ~ we expect the 'time' to be the end of the window which produced the
-            // element in the preceding upstream (stateful and windowed) operator
-            assertTrue("Invalid timestamp " + time,
-                time == 15_000L - 1 || time == 25_000L - 1);
-            return super.onElement(time, window, ctx);
-          }
-        };
-      }
-
-      @Override
-      public boolean equals(Object obj) {
-        return obj instanceof AssertingWindowing;
-      }
-
-      @Override
-      public int hashCode() {
-        return 0;
-      }
-
-
-    }
-
-    execute(new AbstractTestCase<Pair<Integer, Long>, Integer>() {
-      @Override
-      protected List<Pair<Integer, Long>> getInput() {
-        return Arrays.asList(
-            // ~ Pair.of(value, time)
-            Pair.of(1, 10_123L),
-            Pair.of(2, 11_234L),
-            Pair.of(3, 12_345L),
-            // ~ note: exactly one element for the window on purpose (to test out
-            // all is well even in case our `.combineBy` user function is not called.)
-            Pair.of(4, 21_456L));
-      }
-
-      @Override
-      protected Dataset<Integer> getOutput(Dataset<Pair<Integer, Long>> input) {
-        // ~ this operator is supposed to emit elements internally with a timestamp
-        // which equals the emission (== end in this case) of the time window
-        input = AssignEventTime.of(input).using(Pair::getSecond).output();
-        Dataset<Pair<String, Integer>> reduced =
-            ReduceByKey.of(input)
-                .keyBy(e -> "", TypeHint.ofString())
-                .valueBy(Pair::getFirst, TypeHint.ofInt())
-                .combineBy(Sums.ofInts(), TypeHint.ofInt())
-                .windowBy(Time.of(Duration.ofSeconds(5)))
-                .output();
-        // ~ now use a custom windowing with a trigger which does
-        // the assertions subject to this test (use RSBK which has to
-        // use triggering, unlike an optimized RBK)
-        Dataset<Pair<String, Integer>> output =
-            ReduceStateByKey.of(reduced)
-                .keyBy(Pair::getFirst)
-                .valueBy(Pair::getSecond)
-                .stateFactory(SumState::new)
-                .mergeStatesBy(SumState::combine)
-                .windowBy(new AssertingWindowing<>())
-                .output();
-        return FlatMap.of(output)
-            .using((UnaryFunctor<Pair<String, Integer>, Integer>)
-                (elem, context) -> context.collect(elem.getSecond()))
-            .output();
-      }
-
-      @Override
-      public List<Integer> getUnorderedOutput() {
-        return Arrays.asList(4, 6);
-      }
-    });
-  }
-
-  @Test
-  public void testReduceByKeyWithWrongHashCodeImpl() {
-    execute(new AbstractTestCase<Pair<Word, Long>, Pair<Word, Long>>() {
-
-      @Override
-      protected Dataset<Pair<Word, Long>> getOutput(Dataset<Pair<Word, Long>> input) {
-        input = AssignEventTime.of(input).using(Pair::getSecond).output();
-        return ReduceByKey.of(input)
-            .keyBy(Pair::getFirst)
-            .valueBy(e -> 1L)
-            .combineBy(Sums.ofLongs())
-            .windowBy(Time.of(Duration.ofSeconds(1)))
-            .output();
-      }
-
-      @Override
-      protected List<Pair<Word, Long>> getInput() {
-        return Arrays.asList(
-            Pair.of(new Word("euphoria"), 300L),
-            Pair.of(new Word("euphoria"), 600L),
-            Pair.of(new Word("spark"), 900L),
-            Pair.of(new Word("euphoria"), 1300L),
-            Pair.of(new Word("flink"), 1600L),
-            Pair.of(new Word("spark"), 1900L));
-      }
-
-      @Override
-      public List<Pair<Word, Long>> getUnorderedOutput() {
-        return Arrays.asList(
-            Pair.of(new Word("euphoria"), 2L), Pair.of(new Word("spark"), 1L),  // first window
-            Pair.of(new Word("euphoria"), 1L), Pair.of(new Word("spark"), 1L),  // second window
-            Pair.of(new Word("flink"), 1L));
-      }
-    });
-  }
-
-  @Test
-  public void testAccumulators() {
-    execute(new AbstractTestCase<Integer, Pair<Integer, Integer>>() {
-      @Override
-      protected List<Integer> getInput() {
-        return Arrays.asList(1, 2, 3, 4, 5);
-      }
-
-      @Override
-      protected Dataset<Pair<Integer, Integer>>
-      getOutput(Dataset<Integer> input) {
-        return ReduceByKey.of(input)
-            .keyBy(e -> e % 2)
-            .valueBy(e -> e)
-            .reduceBy(Fold.of(0, (Integer a, Integer b, Collector<Integer> ctx) -> {
-              if (b % 2 == 0) {
-                ctx.getCounter("evens").increment();
-              } else {
-                ctx.getCounter("odds").increment();
-              }
-              ctx.collect(a + b);
-            }))
-            .windowBy(GlobalWindowing.get())
-            .output();
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public List<Pair<Integer, Integer>> getUnorderedOutput() {
-        return Arrays.asList(Pair.of(1, 9), Pair.of(0, 6));
-      }
-
-      @Override
-      public void validateAccumulators(SnapshotProvider snapshots) {
-        Map<String, Long> counters = snapshots.getCounterSnapshots();
-        assertEquals(Long.valueOf(2), counters.get("evens"));
-        assertEquals(Long.valueOf(3), counters.get("odds"));
-      }
-    });
-  }
-
-  /**
-   * String with invalid hash code implementation returning constant.
-   */
+  /** String with invalid hash code implementation returning constant. */
   public static class Word {
 
     private final String str;
@@ -867,7 +913,6 @@ public class ReduceByKeyTest extends AbstractOperatorTest {
       Word word = (Word) o;
 
       return !(str != null ? !str.equals(word.str) : word.str != null);
-
     }
 
     @Override
